--- a/home/package.json
+++ b/home/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.4",
     "autoprefixer": "^10.2.6",
     "bulma": "^0.9.2",
+    "ng-recaptcha": "^8.0.0",
     "postcss": "^8.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
